--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
@@ -43,6 +44,7 @@
     "react-modal-video": "^2.0.1",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "react-use": "^17.5.0",
